@@ -1,5 +1,9 @@
 2002-03-09  Mark Mitchell  <mark@codesourcery.com>
 
+	* qm/test/web/web.py (StorageResultsStream.Start): Add test_ids
+	parameter; remove existing results for tests that are going to be
+	re-run.
+
 	* qm/common.py (starts_with): Simplify.
 	(ends_with): Likewise.
 	(parse_assignment): New function.
